-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.15.2
-
None
-
Windows10
Visual Studio 2017
-
-
089911e47d (qt/tqtc-qtbase/5.15)
We ran into a problem when using qt source code to build tools https://github.com/microsoft/vcpkg/issues/13566]:
{{qrhid3d11.obj : error LNK2001: unresolved external symbol IID_IDXGIFactory2
qrhid3d11.obj : error LNK2001: unresolved external symbol IID_ID3D11DeviceContext1
qrhid3d11.obj : error LNK2001: unresolved external symbol IID_ID3DUserDefinedAnnotation
..\..\lib\Qt5Guid.dll : fatal error LNK1120: 3 unresolved externals}}
After communicating with our DirectXSDK team members, we were informed that after the dxsdk update, some functions (IID_IDXGIFactory2-IID_IDXGIFactory5) originally contained in dxguid.lib have been moved to other libraries (see the issue above for details).
If we use the DirectXSDK downloaded from the official website, this problem will occur. Using the library in the Windows 10 SDK does not currently have this problem, but there is no guarantee that subsequent upgrades to the Windows 10 SDK will still cause this problem.
This problem may affect the qt6.x version.
Thanks.
Jack
For Gerrit Dashboard: QTBUG-99050 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
393534,2 | rhi: d3d11: Use __uuidof where we can | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | -1 | 0 |