rhi: d3d11: Use __uuidof where we can

...to help some (not fully explained) SDK issues. We do not need to use
the IID_* symbols after all.

Adapted backport of 2c008d6faf2334beb252cce340ee81b1cea50482 and
c489751efa2c678c11ccfafc0bc08b4f512d08cb.

Fixes: QTBUG-99050
Change-Id: I0338fe0b047bdf44e4306353e883c19730b078b3
Reviewed-by: Christian Strømme <christian.stromme@qt.io>